Add title of website

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -9,6 +9,7 @@
         <title>Appointment Scheduling</title>
     </head>
     <body>
+        <h1>Computer Science 1 Office Hour Signups</h1>
         {% block body %}{% endblock %}
     </body>
 </html>
