Add upcoming scheduled appointments page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,6 +18,8 @@
         <button type="submit">Sign up</button>
     </form>
 
+    <h2><a href="/upcoming">View upcoming scheduled appointments</a></h2>
+
     <script>
         const d = document.querySelector("#date");
         d.addEventListener("change", async function() {
